ostree (2016.5-4) UNRELEASED; urgency=medium

  * d/p/test-sysroot.js-set-strict-mode-when-sourcing-libtest.sh.patch,
    d/p/tests-Use-strict-mode-by-default-for-C-tests.patch: add patches
    to make sure the tests fail as soon as something goes wrong
  * Build-depend on procps, used to check for leaked processes

 -- Simon McVittie <smcv@debian.org>  Sat, 11 Jun 2016 19:52:40 +0100

ostree (2016.5-3) unstable; urgency=medium

  * Remove ostree-grub2 and the boot-related parts of ostree, leaving
    the library and the command-line tool, which are also used by
    Flatpak.
    When we have documentation for how to use and test OSTree
    deployments with a Debian derivative (see #824649), they should be
    reinstated in an ostree-boot package (see #824650).
  * Upload to unstable.

 -- Simon McVittie <smcv@debian.org>  Wed, 08 Jun 2016 11:58:01 +0100

ostree (2016.5-2) experimental; urgency=medium

  * Add a patch to skip the test-parent test if /var/tmp doesn't support
    user xattrs, hopefully fixing FTBFS on x86-csail-02 buildd

 -- Simon McVittie <smcv@debian.org>  Mon, 25 Apr 2016 12:51:33 +0100

ostree (2016.5-1) experimental; urgency=medium

  * New upstream release
    - Remove all patches, applied upstream
    - debian/libostree-1-1.symbols: update for new versioned symbols
    - Build-depend on libmount-dev
    - debian/copyright: update
    - debian/rules, debian/ostree-tests.install: adjust for new installation
      directory for installed-tests
    - debian/rules: use Debian's grub2-mkconfig path
  * debian/gbp.conf: use DEP-14 branch names; disable numbered patches
  * Fix ITP bug number in changelog (was #813308, should have been #697477)
  * debian/control: build-depend on attr, for the tests (only required if
    /var/tmp supports extended attributes)
  * debian/rules: clean up stale gpg-agent processes after testing
  * debian/rules: warn if there are leftover daemon processes after testing