@@ -26,14 +26,7 @@ override_dh_auto_configure:
 	chmod +x tests/*.js
 
 override_dh_auto_test:
-	VERBOSE=1 dh_auto_test
-	# One test creates multiple GPG homedirs, each with its own agent
-	pkill --full "gpg-agent --homedir /var/tmp/tap-test\\.[^/]+/.*" || :
-	if pgrep lt-ostree || pgrep --full "gpg-agent --homedir /var/tmp/tap-test."; then \
-		echo "WARNING: daemon processes were leaked"; \
-		pgrep gpg-agent | xargs --no-run-if-empty ps ww; \
-		pgrep lt-ostree | xargs --no-run-if-empty ps ww; \
-	fi
+	debian/test.sh
 
 override_dh_auto_install:
 	dh_auto_install
